--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <!--CSS-->
-    <link rel="stylesheet" href="../resources/css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!--fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;700&display=swap" rel="stylesheet">
@@ -38,7 +38,7 @@
                 </ul>
                 <span class="navbar-logo">
                     <!--logo-->
-                    <img src="../resources/img/logo.png" alt="Logo" class="navbar-logo">
+                    <img src="logo.png" alt="Logo" class="navbar-logo">
                 </span>
             </div>
         </div>
@@ -49,7 +49,7 @@
         <div class = "border-container p-4">
             <div class="row align-items-center">
                 <div class="col-md-4 text-center">
-                    <img src="../resources/img/MeBasillica.jpg" alt="Hero Image" class="img-fluid rounded">
+                    <img src="MeBasillica.jpg" alt="Hero Image" class="img-fluid rounded">
                 </div>
                 <div class="col-md-8">
                     <h1>About Caroline Steely</h1>
