--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 
     
     <!--CSS-->
-    <link rel="stylesheet" href="../resources/css/style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
 
     
 </head>
@@ -37,7 +37,7 @@
                     </ul>
                     <span class="navbar-logo">
                         <!--logo-->
-                        <img src="../resources/img/logo.png" alt="Logo" class="navbar-logo">
+                        <img src="resources/img/logo.png" alt="Logo" class="navbar-logo">
                     </span>
                 </div>
             </div>
@@ -148,7 +148,7 @@
         </div>
 
         <div class="download_button_container">
-            <a href="../resources/img/ResumeCS.pdf" target="_blank" download="filename.pdf">
+            <a href="resources/img/ResumeCS.pdf" target="_blank" download="filename.pdf">
                 <button>Download PDF</button>
             </a>
         </div>
