--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 
     
     <!--CSS-->
-    <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="stylesheet" href="style.css">
 
     
 </head>
@@ -18,14 +18,14 @@
     <!--NavBar section-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="home.html">Caroline Steely</a>
+            <a class="navbar-brand" href="index.html">Caroline Steely</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="hobbies.html">Hobbies</a>
