--- a/projects.html
+++ b/projects.html
@@ -51,19 +51,19 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div>  
-                <img class="d-block w-100" src="resources/img/OasisProject.png" alt="Oasis Project">          
+                <img class="d-block w-100" src="OasisProject.png" alt="Oasis Project">          
                 <p>Oasis was the first website I ever worked on. This project was imagined for a hackathon that I attended with one other friend. At this point I had no knowledge of web developement other than database systems so this was my first try at making a fully fledged website. We ended up winning an award for this project.</p>
             </div>
           </div>
           <div class="carousel-item">
             <div>
-                <img class="d-block w-100" src="resources/img/WoopProject.png" alt="Second slide">
+                <img class="d-block w-100" src="WoopProject.png" alt="Second slide">
                 <p>This was the second website I ever created. This website was made for the purpose of practicing styling with color and a little bit of JavaScript.</p>
             </div>
           </div>
           <div class="carousel-item">
             <div>
-                <img class="d-block w-100" src="resources/img/LassoRegModelProject.png" alt="Third slide">
+                <img class="d-block w-100" src="LassoRegModelProject.png" alt="Third slide">
                 <p>This was my final project for my Intro to Data Science class. We were given an extra credit assignment where the lower we could get the RMSE, the more points we got. My final model was created using Lasso regression. </p>
             </div>
           </div>
