--- a/resume.html
+++ b/resume.html
@@ -37,7 +37,7 @@
                     </ul>
                     <span class="navbar-logo">
                         <!--logo-->
-                        <img src="resources/img/logo.png" alt="Logo" class="navbar-logo">
+                        <img src="logo.png" alt="Logo" class="navbar-logo">
                     </span>
                 </div>
             </div>
