--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div>  
-                <img class="d-block w-100" src="OasisHome.png" alt="Oasis Project">          
+                <img class="d-block w-100" src="image0.png" alt="Oasis Project">          
                 <p>Oasis was the first website I ever worked on. This project was imagined for a hackathon that I attended with one other friend. At this point I had no knowledge of web developement other than database systems so this was my first try at making a fully fledged website. We ended up winning an award for this project.</p>
             </div>
           </div>
