--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
         </div>
     </div>
 
+    <!-- Calendly badge widget begin -->
+    <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+    <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+    <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/cast4115-colorado', text: 'Schedule time with me', color: '#a7c4ed', textColor: '#ffffff', branding: true }); }</script>
+    <!-- Calendly badge widget end -->
+
     <!-- Footer -->
     <footer class="bg-dark text-light text-center py-3 mt-5">
         <p>Connect with me:</p>
