--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- Calendly badge widget begin -->
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
     <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-    <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/cast4115-colorado', text: 'Schedule time with me', color: '#a7c4ed', textColor: '#ffffff', branding: false }); }</script>
+    <script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/caroline-steely', text: 'Schedule time with me', color: '#a7c4ed', textColor: '#ffffff', branding: false }); }</script>
     <!-- Calendly badge widget end -->
 
     <!-- Footer -->
