Update download links with transcript and new reume

--- a/resume.html
+++ b/resume.html
@@ -148,8 +148,14 @@
         </div>
 
         <div class="download_button_container">
-            <a href="ResumeCS.pdf" target="_blank" download="filename.pdf">
-                <button>Download PDF</button>
+            <a href="Resume_Feb2025.pdf" target="_blank" download="filename.pdf">
+                <button>Download Resume PDF</button>
+            </a>
+        </div>
+
+        <div class="download_button_container">
+            <a href="SSR_TSRPT.pdf" target="_blank" download="filename.pdf">
+                <button>Download Transcript PDF</button>
             </a>
         </div>
     </div>
