changing names of downloads

--- a/resume.html
+++ b/resume.html
@@ -148,13 +148,13 @@
         </div>
 
         <div class="download_button_container">
-            <a href="Resume_Feb2025.pdf" target="_blank" download="filename.pdf">
+            <a href="Resume_Feb2025.pdf" target="_blank" download="CarolineSteelyResume.pdf">
                 <button>Download Resume PDF</button>
             </a>
         </div>
 
         <div class="download_button_container">
-            <a href="SSR_TSRPT.pdf" target="_blank" download="filename.pdf">
+            <a href="SSR_TSRPT.pdf" target="_blank" download="CarolineSteelyTranscript.pdf">
                 <button>Download Transcript PDF</button>
             </a>
         </div>
