--- a/resume.html
+++ b/resume.html
@@ -148,7 +148,7 @@
         </div>
 
         <div class="download_button_container">
-            <a href="Resume_Feb2025.pdf" target="_blank" download="CarolineSteelyResume.pdf">
+            <a href="CarolineSteely_Resume_August2025_ (1).pdf" target="_blank" download="CarolineSteelyResume.pdf">
                 <button>Download Resume PDF</button>
             </a>
         </div>
@@ -173,3 +173,4 @@
 
 </body>
 </html>
+
