--- a/resume.html
+++ b/resume.html
@@ -57,7 +57,7 @@
                 <p><strong>Bachelor of Science in Computer Science</strong> <span class="float-end">Boulder, CO</span></p>
                 <p>Minor in Creative Technology and Design <span class="float-end">Graduation Date: May 2026</span></p>
                 <p>University of Colorado Boulder</p>
-                <p><strong>GPA:</strong> 3.789</p>
+                <p><strong>GPA:</strong> 3.812</p>
                 
                 <p><strong>Study Abroad Semester</strong> <span class="float-end">Rome, IT</span></p>
                 <p>John Felice Rome Center <span class="float-end">Attendance Date: Fall 2024</span></p>
@@ -93,37 +93,55 @@
                 </table>
             </div>
 
-            <!-- Engineering Experience -->
+            <!-- Work Experience -->
             <div>
-                <p class="section-title">ENGINEERING EXPERIENCE</p>
-                <p><strong>IT Team Lead</strong> | Blueprint Boulder | CU Boulder | Jan 2025 - pres</p>
+                <p class="section-title">WORK EXPERIENCE</p>
+                <p><strong>SWE Intern</strong> | Thrivent Financial | Remote | May-Aug 2025</p>
                 <ul>
-                    <li>Hired as a technical team manager to oversee a team of students working to complete IT related projects for local companies</li>
+                    <li>Developed AWS native solution for validating URLs to ensure compliance with company standards.</li>
+                    <li>Utilized Lambdas, Layers, IAM, S3, ECR, Rekognition, Bedrock, Cloud Watch</li>
+                    <li>Deployed infrastructure as code via Terraform using Python and Docker</li>
+                    <li>Worked on DevOps and Java application teams leveraging Agile methodologies including Scrum and Kanban.</li>
+                    <li>Used OpenShift, Kubernetes, GitHub Actions, Jira, GitHub, Git, Confluence, Slack</li>
                 </ul>
-                <p><strong>Hackathon Awardee</strong> | BlasterHacks | Colorado School of Mines | Feb 2024</p>
+                <p><strong>Research Assistant</strong> | CU SPUR | CU Boulder | May 2024 - January 2025</p>
                 <ul>
-                    <li>Worked on front and back end of locally hosted website Oasis which aimed to offer donation support on a need basis for users.</li>
-                    <li>Utilized MongoDB, HTML, CSS, JavaScript, Software Development, and Testing.</li>
+                    <li>Analyzed and cleaned research data in Excel using Pivot Tables, VLOOKUP, and statistical functions to identify trends in student innovation self-efficacy.</li>
+                    <li>Co-authored abstracts, leveraging data visualization and analytical insights to support findings.</li>
                 </ul>
-            </div>
-
-            <!-- Leadership Experience -->
-            <div>
-                <p class="section-title">LEADERSHIP EXPERIENCE</p>
-                <p><strong>Mentor</strong> | Volunteer Resource Center | CU Boulder | April 2023 - May 2024</p>
+                <p><strong>Student Service Mentor</strong> | Volunteer Resource Center | CU Boulder | April 2023 - May 2024</p>
                 <ul>
                     <li>Hired as a mentor for freshmen in the Service and Social Action LLC. Met monthly with students to strategize how to reach their social and educational goals.</li>
-                    <li>Worked on a multidisciplinary team to engage community partners and host four on-campus and one off-campus service event per semester.</li>
+                    <li>Worked on multidisciplinary team to engage community partners and host 4 on-campus and 1 off-campus service event per semester.</li>
                 </ul>
             </div>
 
-            <!-- Additional Experience -->
+            <!-- Projects -->
             <div>
-                <p class="section-title">ADDITIONAL EXPERIENCE</p>
-                <p><strong>Research Assistant (Hybrid)</strong> | CU SPUR | CU Boulder | May 2024 - Present</p>
+                <p class="section-title">PROJECTS</p>
+                <p><strong>Natural Highs Project Team Lead</strong> | Blueprint Boulder | Boulder, CO | August 2025 - current</p>
                 <ul>
-                    <li>Research Initiation: Enhancing Engineering Self-Efficacy through Design of K-12 STEM Projects.</li>
-                    <li>Analyzed and interpreted data in Excel. Cited as a co-author alongside a team of engineers to produce two research papers to be published.</li>
+                    <li>Currently working as a project manager for a student group project to develop an on-boarding application for a local non-profit.</li>
+                    <li>Developing project as a template that can be reused by other non-profits in the future.</li>
+                </ul>
+                <p><strong>IT Team Lead</strong> | Blueprint Boulder | Boulder, CO | Feb-May 2025</p>
+                <ul>
+                    <li>Pioneer organizer of small projects team for club focused on offering technical assistance to local non-profits.</li>
+                    <li>WordPress organization and redesign of websites, reconfiguration of spreadsheet methods to database systems, and google analytics.</li>
+                </ul>
+                <p><strong>AI Mancala Agent</strong> | April 2025</p>
+                <ul>
+                    <li>Programmed a python based active learning AI agent to interactively play a game of Mancala against a user. Implemented AlphaBeta decision tree function to predict moves.</li>
+                </ul>
+                <p><strong>Donation support website</strong> | BlasterHacks | Golden, CO | March 2024</p>
+                <ul>
+                    <li>Developed a full-stack locally-hosted web platform, Oasis, enabling real-time interactions between donors and recipients, with an optimized post search algorithm prioritizing urgent needs.</li>
+                    <li>HTML, CSS, SCSS, MongoDB, JavaScript, Express</li>
+                </ul>
+                <p><strong>Housing Data Model</strong> | April 2024</p>
+                <ul>
+                    <li>Built a multiple regression model to analyze housing prices, optimizing with RMSE and 5-fold cross-validation. Applied feature selection using residual plots, One-Hot Encoding, and Lasso regression.</li>
+                    <li>Python, Pandas, NumPy, Matplotlib, Plotly</li>
                 </ul>
             </div>
 
@@ -131,13 +149,13 @@
             <div>
                 <p class="section-title">STUDENT AFFILIATIONS</p>
                 <ul>
-                    <li>Blueprint Boulder</li>
                     <li>Design for America</li>
                     <li>SKO Serves</li>
                     <li>SWE</li>
                     <li>Colorado Homeless Assistance with Medicine Program</li>
                     <li>Buff Pantry</li>
                     <li>oSTEM</li>
+                    <li>Blueprint Boulder</li>
                     <li>T9Hacks</li>
                     <li>Boulder Freeride</li>
                     <li>Film Buffs</li>
@@ -164,13 +182,12 @@
 
         <!-- Footer -->
         <footer class="text-center mt-4 p-3 bg-dark text-light">
-            <p>Contact: <a href="mailto:Caroline.Steely@colorado.edu" class="text-light">Caroline.Steely@colorado.edu</a></p>
+            <p>Contact: <a href="mailto:Caroline.Steely@colorado.edu" class="text-light">Caroline.Steely@colorado.edu</a> | (346) 201-1442</p>
             <p>Connect with me: 
                 <a href="https://www.linkedin.com/in/carolinesteely" class="text-light mx-2" target="_blank">LinkedIn</a> | 
-                <a href="https://github.com/yourgithub" class="text-light mx-2" target="_blank">GitHub</a>
+                <a href="https://cysteely.github.io" class="text-light mx-2" target="_blank">Portfolio</a>
             </p>
         </footer>
 
 </body>
 </html>
-
